WIP: errors with Stylist namespace, fix typos in Clients view

--- a/Salon/Views/Clients/Edit.cshtml
+++ b/Salon/Views/Clients/Edit.cshtml
@@ -15,8 +15,8 @@
     @Html.LabelFor(model => model.Description)
     @Html.EditorFor(model => model.Description)
 
-    @Html.LabelFor(model => model.Restaurant)
-    @Html.DropDownList("RestaurantId")
+    @Html.LabelFor(model => model.Stylist)
+    @Html.DropDownList("StylistId")
 
     <input type="submit" value="Save" />
 }
