--- a/HairSalon/Views/Stylists/Delete.cshtml
+++ b/HairSalon/Views/Stylists/Delete.cshtml
@@ -2,7 +2,7 @@
     Layout = "_Layout";
 }
 
-@model Salon.Models.Stylist
+@model HairSalon.Models.Stylist
 
 <h2>Are you sure you want to delete this stylist?</h2>
 @Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
