--- a/HairSalon/Views/Clients/Create.cshtml
+++ b/HairSalon/Views/Clients/Create.cshtml
@@ -18,4 +18,4 @@
 
     <input type="submit" value="Add new Client" class="btn btn-primary" />
 }
-<p>@Html.ActionLink("Show all Client", "Index")</p>
+<p>@Html.ActionLink("Show all Clients", "Index")</p>
