--- a/HairSalon/Views/Stylists/Edit.cshtml
+++ b/HairSalon/Views/Stylists/Edit.cshtml
@@ -17,4 +17,5 @@
 
     <input type="submit" value="Save" />
 }
+<p>Go to @Html.ActionLink("this page", "Create", "Stylist") to add a new client to this stylist.</p>
 <p>@Html.ActionLink("Back to list", "Index")</p>
