Add some styling, fix database naming

--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -2,19 +2,26 @@
     Layout = "_Layout";
 }
 @using HairSalon.Models;
-
-<h1>Clients</h1>
+<div class="container">
+  <h1>Clients</h1>
+</div>
 
 @if (@Model.Count == 0)
-{
-  <h3>No clients have been added yet!</h3>
+{ <div class="center">
+    <h3>No clients have been added yet!</h3>
+  </div>
 } 
 
-<ul>
-  @foreach(Client client in Model)
-  {
-    <li>@Html.ActionLink($"{client.Description}", "Details", new { id = client.ClientId })</li>
-  }
-</ul>
-<p>@Html.ActionLink("Add new Client", "Create")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<div class="link-container">
+  <p>@Html.ActionLink("Add new Client", "Create")</p>
+  <p>@Html.ActionLink("Home", "Index", "Home")</p>
+</div>
+
+<div class="center">
+  <ul>
+    @foreach(Client client in Model)
+    {
+      <li>@Html.ActionLink($"{client.Name}", "Details", new { id = client.ClientId })</li>
+    }
+  </ul>
+</div>
