--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -2,6 +2,10 @@
   Layout = "_Layout";
 }
 
-<h1>Eu Clair's Salon</h1>
-<p>@Html.ActionLink("See all clients", "Index", "Clients")</p>
-<p>@Html.ActionLink("See all stylists", "Index", "Stylists")</p> 
+<div class="container">
+  <h1>Eau Clair's Salon</h1>
+</div>
+  <div class="link-container">
+    <p>@Html.ActionLink("See all clients", "Index", "Clients")</p>
+    <p>@Html.ActionLink("See all stylists", "Index", "Stylists")</p>
+  </div>
