--- a/HairSalon/Views/Clients/Create.cshtml
+++ b/HairSalon/Views/Clients/Create.cshtml
@@ -4,18 +4,29 @@
 
 @model HairSalon.Models.Client
 
-<h4>Add a new Client</h4>
-
-<p><strong>NOTE:</strong> You need to have at least one restaurant before you can add an Client!</p>
-<p>Go to @Html.ActionLink("this page", "Create", "Stylist") to create a stylist.</p>
+<div class="container">
+  <h1>Add a New Client</h1>
+</div>
+<hr />
+<p class="center">NOTE: You need to have at least one restaurant before you can add an Client!</p>
+<p class="center">Go to @Html.ActionLink("this page", "Create", "Stylist") to create a stylist.</p>
+<hr />
 
 @using (Html.BeginForm())
-{
-    @Html.LabelFor(model => model.Name)
-    @Html.TextBoxFor(model => model.Name)
-    @Html.LabelFor(model => model.Stylist)
-    @Html.DropDownList("StylistId")
-
-    <input type="submit" value="Add new Client" class="btn btn-primary" />
+{ <div class="form-container">
+    <div>
+      @Html.LabelFor(model => model.Name)
+      @Html.TextBoxFor(model => model.Name)
+    </div>
+    <div>
+      @Html.LabelFor(model => model.Stylist)
+      @Html.DropDownList("StylistId")
+    </div>
+  </div>
+  <div class="center">
+    <input type="submit" value="Add Client" class="btn btn-primary" />
+  </div>
 }
-<p>@Html.ActionLink("Show all Clients", "Index")</p>
+<div class="center">
+  <p>@Html.ActionLink("Show all Clients", "Index")</p>
+</div>
