--- a/HairSalon/Views/Clients/Details.cshtml
+++ b/HairSalon/Views/Clients/Details.cshtml
@@ -4,7 +4,9 @@
 
 @model HairSalon.Models.Client
 
-<h2>Client Details</h2>
+<div class="container">
+<h1>Client Details</h1>
+</div>
 <hr />
 <h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)<h3>
 <h3>@Html.DisplayNameFor(model => model.Stylist): @Html.DisplayFor(model => model.Stylist.Name)<h3>
