--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="container">
   <h1>Clients</h1>
 </div>
-
+<hr />
 @if (@Model.Count == 0)
 { <div class="center">
     <h3>No clients have been added yet!</h3>
@@ -18,7 +18,7 @@
 </div>
 
 <div class="center">
-  <ul>
+  <ul>All Clients
     @foreach(Client client in Model)
     {
       <li>@Html.ActionLink($"{client.Name}", "Details", new { id = client.ClientId })</li>
