--- a/HairSalon/wwwroot/CSS/styles.css
+++ b/HairSalon/wwwroot/CSS/styles.css
@@ -3,6 +3,7 @@ body {
     font-family: 'Exo 2', sans-serif;
     font-family: 'Poppins', sans-serif;
     font-family: 'Quicksand', sans-serif;
+    background-color: #94AE8E;
 }
 
 .container {
@@ -17,9 +18,35 @@ body {
   
 .link-container p {
     display: inline-block;
-    margin-right: 20px; 
+    margin-right: 10px; 
+    margin-left: 10px;
   }
 
 .center {
     text-align: center;
 }
+
+li {
+    list-style-position: inside;
+}
+
+.form-container {
+    display: flex;
+    justify-content: center;
+  }
+.form-container div {
+    display: inline-block;
+    margin: 20px 10px;
+}
+
+.btn {
+    background-color: #F2F8F2;
+    border-radius: 10px;
+    padding-top: 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    font-family: 'Borel', cursive;;
+  }
