--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -5,11 +5,13 @@
 <div class="container">
   <h1>Eau Clair's Salon</h1>
 </div>
-<hr />
   <div class="center">
     <h2>Welcome Claire! What would you like to do?</h2>
   </div>
+  <hr />
   <div class="link-container">
-    <p>@Html.ActionLink("See all clients", "Index", "Clients")</p>
-    <p>@Html.ActionLink("See all stylists", "Index", "Stylists")</p>
+    <p>@Html.ActionLink("See All Clients", "Index", "Clients")</p>
+    <p>@Html.ActionLink("See All Stylists", "Index", "Stylists")</p>
+    <p>@Html.ActionLink("Add New Client", "Create", "Clients")</p>
+    <p>@Html.ActionLink("Add New Stylist", "Create", "Stylists")</p>
   </div>
