--- a/HairSalon/Views/Clients/Delete.cshtml
+++ b/HairSalon/Views/Clients/Delete.cshtml
@@ -4,11 +4,20 @@
 
 @model HairSalon.Models.Client
 
-<h2>Are you sure you want to delete this client?</h2>
+<div class="container">
+  <h1>Delete client</h1>
+  <h4>Deleting: @Html.DisplayFor(model => model.Name)
+</div>
+<hr />
+<div class="center">
+<h2>Are you sure you want to delete this client? This action cannot be undone.</h2>
+</div>
 
-@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
 @using (Html.BeginForm())
-{
-    <input type="submit" value="Delete" />
+{ <div class="center">
+    <input type="submit" value="Delete" class="btn" />
+  </div>
 }
-@Html.ActionLink("Back to List", "Index")
+<div class="link-container">
+  <p>@Html.ActionLink("Back to List", "Index")</p>
+</div>
