--- a/HairSalon/Views/Clients/Details.cshtml
+++ b/HairSalon/Views/Clients/Details.cshtml
@@ -6,10 +6,16 @@
 
 <div class="container">
 <h1>Client Details</h1>
+<h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)<h3>
 </div>
 <hr />
-<h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)<h3>
-<h3>@Html.DisplayNameFor(model => model.Stylist): @Html.DisplayFor(model => model.Stylist.Name)<h3>
-<p>@Html.ActionLink("Edit Client", "Edit", new { id = Model.ClientId })</p>
-<p>@Html.ActionLink("Delete Client", "Delete", new { id = Model.ClientId })</p>
-<p>@Html.ActionLink("Back to list", "Index")</p>
+
+  <div class="center">
+    <h3>@Html.DisplayNameFor(model => model.Stylist): @Html.DisplayFor(model => model.Stylist.Name)<h3>
+  </div>
+ 
+ <div class="link-container">
+  <p>@Html.ActionLink("Edit Client", "Edit", new { id = Model.ClientId })</p>
+  <p>@Html.ActionLink("Delete Client", "Delete", new { id = Model.ClientId })</p>
+  <p>@Html.ActionLink("Back to All Clients", "Index")</p>
+</div> 
