--- a/HairSalon/Views/Clients/Create.cshtml
+++ b/HairSalon/Views/Clients/Create.cshtml
@@ -8,7 +8,7 @@
   <h1>Add a New Client</h1>
 </div>
 <hr />
-<p class="center">NOTE: You need to have at least one restaurant before you can add an Client!</p>
+<p class="center">NOTE: You need to have at least one stylist before you can add a client!</p>
 <p class="center">Go to @Html.ActionLink("this page", "Create", "Stylist") to create a stylist.</p>
 <hr />
 
