--- a/HairSalon/Views/Clients/Edit.cshtml
+++ b/HairSalon/Views/Clients/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
   <h1>Edit</h1>
-  <h4>Editing: @Html.DisplayFor(model => model.Name)</h4>
+  <h4>Editing client: @Html.DisplayFor(model => model.Name)</h4>
 </div>
 <hr />
 
