--- a/HairSalon/Views/Stylists/Create.cshtml
+++ b/HairSalon/Views/Stylists/Create.cshtml
@@ -4,15 +4,24 @@
 
 @model HairSalon.Models.Stylist
 
-<h4>Add a new stylist</h4>
+<div class="container">
+    <h1>Add a new stylist</h1>
+</div>
+<hr />
 
-@* // BeginForm will make this form submitted into a post *@
 @using (Html.BeginForm())
-{
-    @Html.LabelFor(model => model.Name)
-    @Html.TextBoxFor(model => model.Name)
-    <input type="submit" value="Add new stylist" />
+{   <div class="form-container">
+        <div>
+            @Html.LabelFor(model => model.Name)
+            @Html.TextBoxFor(model => model.Name)
+        </div>
+    </div>
+    <div class="center">
+        <input type="submit" value="Add Stylist" class="btn" />
+    </div>
 }
 
-
-<p>@Html.ActionLink("Show all stylists", "Index")</p>
+<div class="link-container">
+    <p>@Html.ActionLink("Show all stylists", "Index")</p>
+    <p>@Html.ActionLink("Home", "Index", "Home")</p>
+</div>
