--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -4,9 +4,13 @@
 
 @model HairSalon.Models.Stylist
 
-<h2>Stylist Details</h2>
+<div class="container">
+    <h1>Stylist Details</h1>
+    <h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
+</div>
 <hr />
-<h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)<h3>
-        <p>@Html.ActionLink("Edit Stylist", "Edit", new { id = Model.StylistId })</p>
-        <p>@Html.ActionLink("Delete Stylist", "Delete", new { id = Model.StylistId})</p>
-        <p>@Html.ActionLink("Back to list", "Index")</p>
+<div class="link-container">
+    <p>@Html.ActionLink("Edit Stylist", "Edit", new { id = Model.StylistId })</p>
+    <p>@Html.ActionLink("Delete Stylist", "Delete", new { id = Model.StylistId})</p>
+    <p>@Html.ActionLink("Back to list", "Index")</p>
+</div>
