--- a/HairSalon/Views/Clients/Delete.cshtml
+++ b/HairSalon/Views/Clients/Delete.cshtml
@@ -5,12 +5,11 @@
 @model HairSalon.Models.Client
 
 <div class="container">
-  <h1>Delete client</h1>
-  <h4>Deleting: @Html.DisplayFor(model => model.Name)
+  <h1>Delete Client</h1>
 </div>
 <hr />
 <div class="center">
-<h2>Are you sure you want to delete this client? This action cannot be undone.</h2>
+  <h2>Are you sure you want to delete @Html.DisplayFor(model => model.Name)? This action cannot be undone.</h2>
 </div>
 
 @using (Html.BeginForm())
